# switch-pokemon-shiny-hunt

./: .gitignore  DISCLAIMER.md  LICENSE  NOTICE  README.md  check_star.py  config.json  encounter_count.txt  encounter_time.txt  hunt_loop.py  hunt_state copy.json  hunt_state.json  palette_db.json  palette_detector.py  run_sequence.sh  star_detector.py  switch_control.py  verify_checks.py
pico-fw/: CMakeLists.txt  pico_sdk_import.cmake
pico-fw/src/: lwipopts.h  main.c  tusb_config.h  usb_descriptors.c
